--- a/teikyo-manyual/style.css
+++ b/teikyo-manyual/style.css
@@ -54,3 +54,15 @@ color:#555;
 font-size:20px;
 }
 
+.image-box {
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+}
+
+.image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* cover にすると切り取り表示 */
+}
