--- a/teikyo-manyual/style.css
+++ b/teikyo-manyual/style.css
@@ -52,8 +52,9 @@ justify-content:center;
 margin:20px 0;
 color:#555;
 font-size:20px;
-
-  width: 300px;
+width: 200px;
+  height: 200px;
+  object-fit: cover;
   overflow: hidden;
   border: 1px solid #ccc;
 }
