--- a/teikyo-manyual/style.css
+++ b/teikyo-manyual/style.css
@@ -43,7 +43,7 @@ border-radius: 8px;
 max-width: 900px;
 }
 
-.manual-img {
+.manual-image {
   width: 200px;
   height: 200px;
   object-fit: cover;
