--- a/teikyo-manyual/style.css
+++ b/teikyo-manyual/style.css
@@ -15,7 +15,15 @@ overflow-y: auto;
 }
 .sidebar h1 {
   font-size: 22px; 
+  margin-top: 0px;
 }
+
+.sabu {
+  font-size: 15px;
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+
 .sidebar h2 {
 font-size: 16px;
 margin-top: 24px;
